<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, MainActivity!</string>
    <string name="app_name">What\'s doing?</string>

    <string name="today_summary">Today\'s Working Summary</string>
    <string name="start_recording">Start</string>
    <string name="finish_recording">Finish</string>
    <string name="now_recording">Now recording...</string>
    <string name="task_code">CODE</string>
    <string name="task_name">DESCRIPTION</string>
    <string name="update">Update</string>
    <string name="daily_summary">Daily</string>
    <string name="monthly_summary">Monthly</string>
    <string name="define_task">New Task</string>
    <string name="selectTask">Select your task</string>
</resources>